tests/e2e/semantics/foreach_invalid1.error
Error: syntax error in story at line 4, column 5

4|        b = b + elem
          ^

E0100: Can't assign `string` to `int`
